# node-probe

./: .gitignore  CHANGELOG.md  Makefile  README.md  mix.exs  node-probe-implementation-prompt.md
assets/css/: app.css
assets/js/: app.js  chart_hooks.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: node_probe.ex  node_probe_web.ex
lib/node_probe/: aggregator.ex  application.ex  metrics.ex
lib/node_probe/bitcoin/: enricher.ex  rpc.ex  rpc_behaviour.ex  types.ex
lib/node_probe/collectors/: ebpf_collector.ex  rpc_collector.ex
lib/node_probe_web/: endpoint.ex  fee_format.ex  gettext.ex  router.ex  telemetry.ex
lib/node_probe_web/components/: core_components.ex  layouts.ex
lib/node_probe_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/node_probe_web/live/: anomaly_live.ex  block_live.ex  dashboard_live.ex  io_live.ex  mempool_live.ex  peers_live.ex  pulse_live.ex
priv/ebpf/: Cargo.toml
priv/ebpf/node-probe-ebpf/: Cargo.toml
priv/ebpf/node-probe-ebpf/src/: main.rs  types.rs
priv/ebpf/node-probe-loader/: Cargo.toml
priv/ebpf/node-probe-loader/src/: main.rs
priv/static/: cache_manifest.json
priv/systemd/: node-probe.service
test/node_probe/: aggregator_test.exs  metrics_test.exs
test/node_probe/bitcoin/: enricher_test.exs  rpc_test.exs
test/node_probe/collectors/: ebpf_collector_test.exs  rpc_collector_test.exs
test/node_probe_web/: fee_format_test.exs
test/node_probe_web/controllers/: error_html_test.exs  error_json_test.exs  (+1 more)
test/support/: conn_case.ex
(+8 files in other folders)
