[package]
name = "node-probe-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node-probe-loader"
path = "src/main.rs"

[dependencies]
aya = { version = "0.13" }
aya-log = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
bytes = "1"

[dev-dependencies]
tempfile = "3"
